force-app/main/default/objects/Product_Assisted_Growth_Staging__c/Product_Assisted_Growth_Staging__c.object-meta.xml
<CustomObject>
    <description>Captures the PAG Rest Requests received from Polaris.</description>
    <label>Product Assisted Growth Staging</label>
    <nameField>
        <displayFormat>PAG_Staging-{000000}</displayFormat>
        <label>Product Assisted Growth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Assisted Growth Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>