force-app/main/default/objects/Product_Assisted_Growth_Staging__c/fields/PAG__c.field-meta.xml
<CustomField>
    <fullName>PAG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures Related PAG ID</description>
    <label>PAG</label>
    <referenceTo>Product_Assisted_Growth__c</referenceTo>
    <relationshipLabel>Product Assisted Growth Staging</relationshipLabel>
    <relationshipName>Product_Assisted_Growth_Staging_del</relationshipName>
    <type>Lookup</type>
</CustomField>