force-app/main/default/objects/Product_Assisted_Growth_Staging__c/fields/PAG_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>PAG_Request_JSON__c</fullName>
    <description>Capture the JSON Request for PAG API</description>
    <label>PAG Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>