force-app/main/default/objects/Product_Assisted_Growth_Staging__c/fields/PAG_Response__c.field-meta.xml
<CustomField>
    <fullName>PAG_Response__c</fullName>
    <description>response sent by sfdc</description>
    <label>PAG Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>